# AILEE-Trust-Layer

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  TESTING_SUMMARY.md  __init__.py  ailee_ai.py  ailee_client.py  ailee_config_presets.py  ailee_trust_pipeline_v1.py  app.py  fix_hist.py  fix_mining.py  formatters.py  index.html  models.py  render.yaml  requirements.txt  script.js  setup.py  styles.css  test_ai_integrations.py  test_feen_integration.py  test_peer_adapters.py  test_smart_quotes.py
ailee/: __init__.py  ailee_client.py  ailee_trust_pipeline_v1.py
backends/: __init__.py  base.py  feen_backend.py  software_backend.py
docs/: AI_INTEGRATION_GUIDE.md  ARCHITECTURE.md  AUDIT_SCHEMA.md  DATA_CENTERS.md  GRACE_LAYER.md  RUST_README.md  VERSIONING.md
domains/: ailee_datacenter_domain.py
examples/: ai_integration_complete.py  ai_integration_gemini.py  ai_integration_multi_model.py  ai_integration_openai.py  complete_workflow.rs  feen_vs_software.py
optional/: __init__.py  ailee_ai_integrations.py  ailee_datacenter_helpers.py  ailee_monitors.py  ailee_peer_adapters.py  ailee_replay.py  ailee_serialization.py
src/: consensus.rs  generation.rs  lib.rs  lineage.rs  model.rs  trust.rs
tests/: PEER_ADAPTERS_EFFECTIVENESS_REPORT.md  integration_tests.rs  test_ai_integrations.py  test_ailee_ai.py  test_auditory_domain.py  test_automotive_domain.py  test_cross_ecosystem_domain.py  test_crypto_mining_domain.py  test_datacenter_domain.py  test_feen_integration.py  test_governance_domain.py  (+10 more)
(+115 files in other folders)
